--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Mason McCallum"
   avatar           : "profile.png"
-  bio              : "I am a Computational and Applied Mathematics PhD. Student"
+  bio              : "Computational and Applied Mathematics PhD. Student"
   location         : "Dallas TX"
   employer         : "Southern Methodist University"
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
