--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   avatar           : "profile.png"
   bio              : "Computational and Applied Mathematics PhD. Student"
   location         : "Dallas TX"
-  employer         : "Southern Methodist University"
+  employer         : "SMU"
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : #"http://yourfullgooglescholarurl.com"
   email            : "masonamccallum@gmail.com"
