--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ url                      : https://masonamccallum.github.io # the base hostname 
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "masonamccallum/masonamccallum.github.io.git"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
-breadcrumbs              : false # true, false (default)
+breadcrumbs              : false
 words_per_minute         : 160
 future                   : true
 read_more                : "disabled" # if enabled, adds "Read more" links to excerpts
@@ -183,7 +183,7 @@ collections:
     output: false
     permalink: /:collection/:path/
   portfolio:
-    output: false
+    output: true 
     permalink: /:collection/:path/
   talks:
     output: true
